--- a/ui/vmm-create-interface.ui
+++ b/ui/vmm-create-interface.ui
@@ -800,6 +800,11 @@
       <action-widget response="0">bridge-ok</action-widget>
     </action-widgets>
   </object>
+  <object class="GtkImage" id="image1">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="stock">gtk-new</property>
+  </object>
   <object class="GtkDialog" id="ip-config">
     <property name="can_focus">False</property>
     <property name="border_width">5</property>
@@ -1458,16 +1463,15 @@
                 <property name="border_width">6</property>
                 <property name="spacing">10</property>
                 <child>
-                  <object class="GtkHBox" id="header-icon-box">
+                  <object class="GtkImage" id="image2">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <child>
-                      <placeholder/>
-                    </child>
+                    <property name="icon_name">network-idle</property>
+                    <property name="icon-size">6</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
-                    <property name="fill">True</property>
+                    <property name="fill">False</property>
                     <property name="position">0</property>
                   </packing>
                 </child>
@@ -2110,6 +2114,7 @@
                     <property name="label" translatable="yes">_Finish</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
+                    <property name="image">image1</property>
                     <property name="use_underline">True</property>
                     <signal name="clicked" handler="on_finish_clicked" swapped="no"/>
                   </object>
