--- a/ui/vmm-create.ui
+++ b/ui/vmm-create.ui
@@ -16,6 +16,11 @@
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
   </object>
+  <object class="GtkImage" id="image20">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="stock">gtk-new</property>
+  </object>
   <object class="GtkWindow" id="vmm-create">
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">New VM</property>
@@ -38,16 +43,15 @@
                 <property name="border_width">6</property>
                 <property name="spacing">10</property>
                 <child>
-                  <object class="GtkHBox" id="create-vm-icon-box">
+                  <object class="GtkImage" id="image5">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <child>
-                      <placeholder/>
-                    </child>
+                    <property name="icon_name">vm_new_wizard</property>
+                    <property name="icon-size">6</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
-                    <property name="fill">True</property>
+                    <property name="fill">False</property>
                     <property name="position">0</property>
                   </packing>
                 </child>
@@ -2399,6 +2403,21 @@ is not yet supported.&lt;/small&gt;</property>
                                                           </packing>
                                                         </child>
                                                       </object>
+                                                      <packing>
+                                                        <property name="left_attach">3</property>
+                                                        <property name="top_attach">0</property>
+                                                        <property name="width">1</property>
+                                                        <property name="height">1</property>
+                                                      </packing>
+                                                    </child>
+                                                    <child>
+                                                      <placeholder/>
+                                                    </child>
+                                                    <child>
+                                                      <placeholder/>
+                                                    </child>
+                                                    <child>
+                                                      <placeholder/>
                                                     </child>
                                                   </object>
                                                 </child>
@@ -2677,6 +2696,7 @@ is not yet supported.&lt;/small&gt;</property>
                     <property name="label" translatable="yes">_Finish</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
+                    <property name="image">image20</property>
                     <property name="use_underline">True</property>
                     <signal name="clicked" handler="on_create_finish_clicked" swapped="no"/>
                   </object>
