--- a/ui/vmm-details.ui
+++ b/ui/vmm-details.ui
@@ -110,6 +110,16 @@
     <property name="can_focus">False</property>
     <property name="stock">gtk-missing-image</property>
   </object>
+  <object class="GtkImage" id="image70">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="stock">gtk-apply</property>
+  </object>
+  <object class="GtkImage" id="image80">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="stock">gtk-add</property>
+  </object>
   <object class="GtkWindow" id="vmm-details">
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">Virtual Machine</property>
@@ -733,6 +743,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">False</property>
+                        <property name="image">image80</property>
                         <property name="use_underline">True</property>
                         <signal name="clicked" handler="on_add_hardware_button_clicked" swapped="no"/>
                       </object>
@@ -7207,6 +7218,7 @@ I/O:</property>
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">False</property>
+                        <property name="image">image70</property>
                         <property name="use_underline">True</property>
                         <signal name="clicked" handler="on_console_auth_login_clicked" swapped="no"/>
                       </object>
