--- a/ui/vmm-open-connection.ui
+++ b/ui/vmm-open-connection.ui
@@ -35,6 +35,11 @@
       </row>
     </data>
   </object>
+  <object class="GtkImage" id="image1">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="stock">gtk-connect</property>
+  </object>
   <object class="GtkDialog" id="vmm-open-connection">
     <property name="can_focus">False</property>
     <property name="border_width">6</property>
@@ -77,6 +82,7 @@
                 <property name="can_default">True</property>
                 <property name="has_default">True</property>
                 <property name="receives_default">True</property>
+                <property name="image">image1</property>
                 <property name="use_underline">True</property>
                 <signal name="clicked" handler="on_connect_clicked" swapped="no"/>
               </object>
