--- a/ui/vmm-details.ui
+++ b/ui/vmm-details.ui
@@ -75,41 +75,6 @@
     <property name="upper">1000000000</property>
     <property name="step_increment">10</property>
   </object>
-  <object class="GtkImage" id="image177">
-    <property name="visible">True</property>
-    <property name="can_focus">False</property>
-    <property name="stock">gtk-save</property>
-  </object>
-  <object class="GtkImage" id="image178">
-    <property name="visible">True</property>
-    <property name="can_focus">False</property>
-    <property name="stock">gtk-missing-image</property>
-  </object>
-  <object class="GtkImage" id="image2">
-    <property name="visible">True</property>
-    <property name="can_focus">False</property>
-    <property name="stock">gtk-media-play</property>
-  </object>
-  <object class="GtkImage" id="image3">
-    <property name="visible">True</property>
-    <property name="can_focus">False</property>
-    <property name="stock">gtk-missing-image</property>
-  </object>
-  <object class="GtkImage" id="image4">
-    <property name="visible">True</property>
-    <property name="can_focus">False</property>
-    <property name="stock">gtk-missing-image</property>
-  </object>
-  <object class="GtkImage" id="image5">
-    <property name="visible">True</property>
-    <property name="can_focus">False</property>
-    <property name="stock">gtk-missing-image</property>
-  </object>
-  <object class="GtkImage" id="image6">
-    <property name="visible">True</property>
-    <property name="can_focus">False</property>
-    <property name="stock">gtk-missing-image</property>
-  </object>
   <object class="GtkImage" id="image70">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
@@ -189,7 +154,7 @@
               </object>
             </child>
             <child>
-              <object class="GtkMenuItem" id="virtual_machine1">
+              <object class="GtkMenuItem" id="details-vm-menu">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="label" translatable="yes">Virtual _Machine</property>
@@ -198,135 +163,6 @@
                 <child type="submenu">
                   <object class="GtkMenu" id="virtual_machine1_menu">
                     <property name="can_focus">False</property>
-                    <child>
-                      <object class="GtkImageMenuItem" id="details-menu-run">
-                        <property name="label" translatable="yes">_Run</property>
-                        <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                        <property name="use_underline">True</property>
-                        <property name="image">image2</property>
-                        <property name="use_stock">False</property>
-                        <signal name="activate" handler="on_details_menu_run_activate" swapped="no"/>
-                      </object>
-                    </child>
-                    <child>
-                      <object class="GtkCheckMenuItem" id="details-menu-pause">
-                        <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                        <property name="label" translatable="yes">_Pause</property>
-                        <property name="use_underline">True</property>
-                        <signal name="activate" handler="on_details_menu_pause_activate" swapped="no"/>
-                      </object>
-                    </child>
-                    <child>
-                      <object class="GtkImageMenuItem" id="details-menu-shutdown">
-                        <property name="label" translatable="yes">S_hut Down</property>
-                        <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                        <property name="use_underline">True</property>
-                        <property name="image">image3</property>
-                        <property name="use_stock">False</property>
-                        <child type="submenu">
-                          <object class="GtkMenu" id="details-menu-shutdown_menu">
-                            <property name="can_focus">False</property>
-                            <child>
-                              <object class="GtkImageMenuItem" id="details-menu-reboot">
-                                <property name="label" translatable="yes">_Reboot</property>
-                                <property name="visible">True</property>
-                                <property name="can_focus">False</property>
-                                <property name="use_underline">True</property>
-                                <property name="image">image4</property>
-                                <property name="use_stock">False</property>
-                                <signal name="activate" handler="on_details_menu_reboot_activate" swapped="no"/>
-                              </object>
-                            </child>
-                            <child>
-                              <object class="GtkImageMenuItem" id="details-menu-poweroff">
-                                <property name="label" translatable="yes">S_hut Down</property>
-                                <property name="visible">True</property>
-                                <property name="can_focus">False</property>
-                                <property name="use_underline">True</property>
-                                <property name="image">image5</property>
-                                <property name="use_stock">False</property>
-                                <signal name="activate" handler="on_details_menu_poweroff_activate" swapped="no"/>
-                              </object>
-                            </child>
-                            <child>
-                              <object class="GtkImageMenuItem" id="details-menu-reset">
-                                <property name="label" translatable="yes">F_orce Reset</property>
-                                <property name="visible">True</property>
-                                <property name="can_focus">False</property>
-                                <property name="use_underline">True</property>
-                                <property name="image">image178</property>
-                                <property name="use_stock">False</property>
-                                <signal name="activate" handler="on_details_menu_reset_activate" swapped="no"/>
-                              </object>
-                            </child>
-                            <child>
-                              <object class="GtkImageMenuItem" id="details-menu-destroy">
-                                <property name="label" translatable="yes">_Force Off</property>
-                                <property name="visible">True</property>
-                                <property name="can_focus">False</property>
-                                <property name="use_underline">True</property>
-                                <property name="image">image6</property>
-                                <property name="use_stock">False</property>
-                                <signal name="activate" handler="on_details_menu_destroy_activate" swapped="no"/>
-                              </object>
-                            </child>
-                            <child>
-                              <object class="GtkSeparatorMenuItem" id="menuitem3">
-                                <property name="visible">True</property>
-                                <property name="can_focus">False</property>
-                              </object>
-                            </child>
-                            <child>
-                              <object class="GtkImageMenuItem" id="details-menu-save">
-                                <property name="label">_Save</property>
-                                <property name="visible">True</property>
-                                <property name="can_focus">False</property>
-                                <property name="use_underline">True</property>
-                                <property name="image">image177</property>
-                                <property name="use_stock">False</property>
-                                <signal name="activate" handler="on_details_menu_save_activate" swapped="no"/>
-                              </object>
-                            </child>
-                          </object>
-                        </child>
-                      </object>
-                    </child>
-                    <child>
-                      <object class="GtkSeparatorMenuItem" id="separator11">
-                        <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                      </object>
-                    </child>
-                    <child>
-                      <object class="GtkMenuItem" id="details-menu-clone">
-                        <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                        <property name="label" translatable="yes">_Clone</property>
-                        <property name="use_underline">True</property>
-                        <signal name="activate" handler="on_details_menu_clone_activate" swapped="no"/>
-                      </object>
-                    </child>
-                    <child>
-                      <object class="GtkMenuItem" id="details-menu-migrate">
-                        <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                        <property name="label" translatable="yes">_Migrate...</property>
-                        <property name="use_underline">True</property>
-                        <signal name="activate" handler="on_details_menu_migrate_activate" swapped="no"/>
-                      </object>
-                    </child>
-                    <child>
-                      <object class="GtkMenuItem" id="details-menu-delete">
-                        <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                        <property name="label" translatable="yes">_Delete...</property>
-                        <property name="use_underline">True</property>
-                        <signal name="activate" handler="on_details_menu_delete_activate" swapped="no"/>
-                      </object>
-                    </child>
                     <child>
                       <object class="GtkSeparatorMenuItem" id="separator2">
                         <property name="visible">True</property>
