Set list selection signals in glade, not code

--- a/ui/addhardware.ui
+++ b/ui/addhardware.ui
@@ -65,12 +65,14 @@
                 <property name="vscrollbar_policy">never</property>
                 <property name="shadow_type">etched-in</property>
                 <child>
-                  <object class="GtkTreeView" id="hardware-list">
+                  <object class="GtkTreeView" id="hw-list">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="headers_visible">False</property>
                     <child internal-child="selection">
-                      <object class="GtkTreeSelection" id="treeview-selection1"/>
+                      <object class="GtkTreeSelection" id="treeview-selection1">
+                        <signal name="changed" handler="on_hw_list_changed" swapped="no"/>
+                      </object>
                     </child>
                   </object>
                 </child>
