--- a/ui/createinterface.ui
+++ b/ui/createinterface.ui
@@ -1248,7 +1248,9 @@
                                                             <property name="can_focus">True</property>
                                                             <property name="headers_visible">False</property>
                                                             <child internal-child="selection">
-                                                            <object class="GtkTreeSelection" id="treeview-selection1"/>
+                                                            <object class="GtkTreeSelection" id="treeview-selection1">
+                                                            <signal name="changed" handler="on_ipv6_address_list_changed" swapped="no"/>
+                                                            </object>
                                                             </child>
                                                             </object>
                                                             </child>
