--- a/ui/details.ui
+++ b/ui/details.ui
@@ -563,7 +563,9 @@
                             <property name="headers_visible">False</property>
                             <signal name="button-press-event" handler="on_hw_list_button_press_event" swapped="no"/>
                             <child internal-child="selection">
-                              <object class="GtkTreeSelection" id="treeview-selection1"/>
+                              <object class="GtkTreeSelection" id="treeview-selection1">
+                                <signal name="changed" handler="on_hw_list_changed" swapped="no"/>
+                              </object>
                             </child>
                           </object>
                         </child>
@@ -2960,7 +2962,9 @@ I/O:</property>
                                                             <property name="can_focus">True</property>
                                                             <property name="headers_visible">False</property>
                                                             <child internal-child="selection">
-                                                            <object class="GtkTreeSelection" id="treeview-selection5"/>
+                                                            <object class="GtkTreeSelection" id="treeview-selection5">
+                                                            <signal name="changed" handler="on_config_boot_list_changed" swapped="no"/>
+                                                            </object>
                                                             </child>
                                                             </object>
                                                             </child>
