--- a/ui/host.ui
+++ b/ui/host.ui
@@ -2,11 +2,6 @@
 <interface>
   <!-- interface-requires gtk+ 3.0 -->
   <object class="GtkAccelGroup" id="accelgroup1"/>
-  <object class="GtkImage" id="image3">
-    <property name="visible">True</property>
-    <property name="can_focus">False</property>
-    <property name="stock">gtk-open</property>
-  </object>
   <object class="GtkImage" id="image1">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
@@ -16,6 +11,11 @@
     <property name="visible">True</property>
     <property name="can_focus">False</property>
     <property name="stock">gtk-new</property>
+  </object>
+  <object class="GtkImage" id="image3">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="stock">gtk-open</property>
   </object>
   <object class="GtkWindow" id="vmm-host">
     <property name="can_focus">False</property>
@@ -507,7 +507,9 @@
                             <property name="can_focus">True</property>
                             <property name="headers_visible">False</property>
                             <child internal-child="selection">
-                              <object class="GtkTreeSelection" id="treeview-selection1"/>
+                              <object class="GtkTreeSelection" id="treeview-selection1">
+                                <signal name="changed" handler="on_net_list_changed" swapped="no"/>
+                              </object>
                             </child>
                           </object>
                         </child>
@@ -1544,7 +1546,9 @@
                                             <property name="can_focus">True</property>
                                             <signal name="button-press-event" handler="on_vol_list_button_press_event" swapped="no"/>
                                             <child internal-child="selection">
-                                              <object class="GtkTreeSelection" id="treeview-selection3"/>
+                                              <object class="GtkTreeSelection" id="treeview-selection3">
+                                                <signal name="changed" handler="on_vol_list_changed" swapped="no"/>
+                                              </object>
                                             </child>
                                           </object>
                                         </child>
@@ -1816,7 +1820,9 @@
                             <property name="can_focus">True</property>
                             <property name="headers_visible">False</property>
                             <child internal-child="selection">
-                              <object class="GtkTreeSelection" id="treeview-selection4"/>
+                              <object class="GtkTreeSelection" id="treeview-selection4">
+                                <signal name="changed" handler="on_interface_list_changed" swapped="no"/>
+                              </object>
                             </child>
                           </object>
                         </child>
