Use consistent widget names for create wizard headers
Makes copying code around simpler

--- a/ui/clone.ui
+++ b/ui/clone.ui
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- Generated with glade 3.15.4 on Fri Sep 27 10:23:23 2013 -->
 <interface>
   <!-- interface-requires gtk+ 3.0 -->
   <object class="GtkImage" id="image1">
@@ -172,7 +173,7 @@
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="icon_name">network-idle</property>
-                                <property name="icon-size">6</property>
+                                <property name="icon_size">6</property>
                               </object>
                             </child>
                           </object>
@@ -329,7 +330,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="stock">gtk-harddisk</property>
-                        <property name="icon-size">6</property>
+                        <property name="icon_size">6</property>
                       </object>
                     </child>
                   </object>
@@ -577,7 +578,7 @@
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <child>
-          <object class="GtkViewport" id="clone-header">
+          <object class="GtkViewport" id="header">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="resize_mode">queue</property>
@@ -592,7 +593,7 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="icon_name">vm_clone_wizard</property>
-                    <property name="icon-size">6</property>
+                    <property name="icon_size">6</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
