--- a/ui/create.ui
+++ b/ui/create.ui
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- Generated with glade 3.15.4 on Fri Sep 27 10:23:02 2013 -->
 <interface>
   <!-- interface-requires gtk+ 3.0 -->
   <object class="GtkAdjustment" id="adjustment1">
@@ -32,7 +33,7 @@
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <child>
-          <object class="GtkViewport" id="create-header">
+          <object class="GtkViewport" id="header">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="resize_mode">queue</property>
@@ -47,7 +48,7 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="icon_name">vm_new_wizard</property>
-                    <property name="icon-size">6</property>
+                    <property name="icon_size">6</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -78,7 +79,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkLabel" id="config-pagenum">
+                          <object class="GtkLabel" id="header-pagenum">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="xalign">0</property>
@@ -1013,7 +1014,6 @@ User shouldn't see this.</property>
                                             <property name="visible">True</property>
                                             <property name="can_focus">True</property>
                                             <property name="invisible_char">●</property>
-                                            <property name="invisible_char_set">True</property>
                                           </object>
                                           <packing>
                                             <property name="expand">True</property>
@@ -1183,7 +1183,6 @@ User shouldn't see this.</property>
                                                 <property name="visible">True</property>
                                                 <property name="can_focus">True</property>
                                                 <property name="invisible_char">●</property>
-                                                <property name="invisible_char_set">True</property>
                                               </object>
                                               <packing>
                                                 <property name="expand">True</property>
@@ -1293,8 +1292,8 @@ is not yet supported.&lt;/small&gt;</property>
                               <object class="GtkVBox" id="install-detect-os-box">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
-                                <signal name="show" handler="on_install_detect_os_box_show" swapped="no"/>
                                 <signal name="hide" handler="on_install_detect_os_box_hide" swapped="no"/>
+                                <signal name="show" handler="on_install_detect_os_box_show" swapped="no"/>
                                 <child>
                                   <object class="GtkCheckButton" id="install-detect-os">
                                     <property name="label" translatable="yes">A_utomatically detect operating system based on install media</property>
