--- a/ui/migrate.ui
+++ b/ui/migrate.ui
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- Generated with glade 3.15.4 on Fri Sep 27 09:56:20 2013 -->
 <interface>
   <!-- interface-requires gtk+ 3.0 -->
   <object class="GtkAdjustment" id="adjustment1">
@@ -31,7 +32,7 @@
         <property name="can_focus">False</property>
         <property name="spacing">6</property>
         <child>
-          <object class="GtkViewport" id="migrate-header">
+          <object class="GtkViewport" id="header">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="resize_mode">queue</property>
@@ -46,7 +47,7 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="icon_name">vm_clone_wizard</property>
-                    <property name="icon-size">6</property>
+                    <property name="icon_size">6</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -55,7 +56,7 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkLabel" id="migrate-main-label">
+                  <object class="GtkLabel" id="header-label">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="xalign">0</property>
@@ -689,7 +690,7 @@
               <object class="GtkHButtonBox" id="hbuttonbox1">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="spacing">12</property>
+                <property name="spacing">6</property>
                 <property name="layout_style">end</property>
                 <child>
                   <object class="GtkButton" id="migrate-cancel">
