--- a/ui/createpool.ui
+++ b/ui/createpool.ui
@@ -365,7 +365,7 @@
                             <property name="has_entry">True</property>
                             <child internal-child="entry">
                               <object class="GtkEntry" id="combobox-entry1">
-                                <property name="can_focus">False</property>
+                                <property name="can_focus">True</property>
                                 <property name="width_chars">25</property>
                               </object>
                             </child>
@@ -401,7 +401,7 @@
                             <property name="has_entry">True</property>
                             <child internal-child="entry">
                               <object class="GtkEntry" id="combobox-entry2">
-                                <property name="can_focus">False</property>
+                                <property name="can_focus">True</property>
                                 <property name="width_chars">25</property>
                               </object>
                             </child>
